# jama-mcp-server

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: implement.md  memory-audit.md  phase-handoff.md  plan.md  pre-compact.md  review.md  test.md
.claude/hooks/: validate-docs-placement.sh
.claude/skills/memory-hygiene/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-build.yml  k8s-validate.yml
docker/: Dockerfile  docker-compose.yml
docs/: setup.md
docs/runbooks/: cloud-routine-config.md
docs/superpowers/findings/: 2026-05-11-jama-mvp-dx-testing-findings.md
docs/superpowers/plans/: 2026-04-28-jama-mcp-server-phase-0-initialization.md  2026-04-29-jama-mcp-server-phase-1-functional-mvp.md  2026-04-30-jama-mcp-server-phase-2-docker.md  2026-05-01-jama-mcp-server-phase-3-minikube.md
docs/superpowers/specs/: 2026-04-28-jama-mcp-server-design.md  2026-05-10-jama-mvp-build-design.md  2026-05-11-jama-mvp-dx-testing-design.md
k8s/: .gitignore  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml
src/jama_client/: __init__.py  auth.py  client.py  exceptions.py  models.py
src/jama_mcp_server/: __init__.py  __main__.py  config.py  logging_config.py  server.py  tools.py
src/jama_mcp_server/tools/: __init__.py  core.py  workflow.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/fixtures/jama_responses/: abstractitems_by_type.json  abstractitems_search.json  comments_create.json  items_create.json  items_downstream_relationships.json  items_get.json  items_test_runs.json  itemtypes_list.json  oauth_token.json  projects_list.json  relationships_create.json  relationshiptypes_list.json  users_current.json
tests/integration/: __init__.py  conftest.py  test_smoke.py  test_write_tools.py
tests/unit/: __init__.py  test_smoke.py
tests/unit/jama_client/: __init__.py  test_auth.py  test_client_dx_testing.py  test_client_mvp.py  test_client_operations.py  test_client_transport.py  test_exceptions.py  test_models.py
tests/unit/jama_mcp_server/: __init__.py  test_config.py  test_logging_config.py  test_protocol.py  test_server_health.py  test_server_lifespan.py  test_server_readyz.py  test_tools.py
