[project]
name = "jama-mcp-server"
version = "0.0.1"
description = "Model Context Protocol server providing access to Jamacloud (Jama Connect SaaS) via its REST API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = [
    "mcp",
    "model-context-protocol",
    "jama",
    "jama-connect",
    "jamacloud",
    "agentic-ai",
    "fastmcp",
    "requirements-traceability",
]
authors = [{ name = "Arthur Fantaci" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
jama-mcp-stdio = "jama_mcp_server.server:main_stdio"
jama-mcp-http = "jama_mcp_server.server:main_http"

[project.urls]
Homepage = "https://github.com/arthurfantaci/jama-mcp-server"
Repository = "https://github.com/arthurfantaci/jama-mcp-server"
Issues = "https://github.com/arthurfantaci/jama-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jama_client", "src/jama_mcp_server"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "TRY",    # tryceratops (exception handling)
    "EM",     # flake8-errmsg (exception messages)
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "ANN401", # Dynamically typed expressions (Any)
    "TRY003", # Long exception messages
    "EM101",  # String literal in exception
    "EM102",  # f-string in exception
    "RET504", # Unnecessary variable before return
    "PLR0913",# Too many function arguments
    "PLR2004",# Magic value in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
    "S311",
    "ANN",
    "B017",
    "D",
    "PLR2004",
    "PT011",
    "ARG",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "integration: opt-in tests that hit the real Jamacloud sandbox (requires JAMA_OAUTH_CLIENT_ID and JAMA_OAUTH_CLIENT_SECRET)",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/jama_client", "src/jama_mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 0

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
